@@ -1,3 +1,10 @@
+2009-06-26  Doug Evans  <dje@sebabeach.org>
+
+	* Makefile.def (host_modules): Add cgen.
+	* Makefile.in: Regenerate.
+	* configure.ac (host_tools): Add cgen.
+	* configure: Regenerate.
+
 2009-06-17  Michael Eager <eager@eagercon.com>
 
 	* COPYING.LIBGLOSS: Add Xilinx license.
